# GitHubAction

./: pyproject.toml
.github/workflows/: azure-pipeline.yaml
myvenv/: pyvenv.cfg
src/azuremlapp/: .env
src/azuremlapp/output/: model_fraud.pkl
src/azuremlapp/resources/: fraud_transactions_100.csv
src/azuremlapp/utils/: fraud_train.py
supervised_ml.egg-info/: SOURCES.txt  requires.txt
